2020-02-16:
  Add support for quiet and signaling NaNs to ieee header.

2019-10-31:
  Add support for xtensa architecture.
  Add support for nios2 architecture.

2019-10-12:
  Really add support for microblaze. A previous commit was lacking
	the necessary line.

2019-09-02:
  Add support for e2k architectur. Thanks to Michael Shigorin.

2019-08-01:
  Add min exponent width option in double-to-string conversion.

2019-06-22:
  Remove redundant parenthesis.

2019-06-11:
  Changed all macros to use DOUBLE_CONVERSION_ as prefix.
  Renamed ALLOW_CASE_INSENSIBILITY to ALLOW_CASE_INSENSITIVITY,
    the old name is still available but officially deprecated.
  Created and exposed new intermediate function StrtodTrimmed().

2019-05-25:
  Fix `0x` for string->double conversion when Hex Floats are allowed.
  Avoid integer overflow when exponents for hex floats were too big.
  Update version number.

2019-04-22:
  Fixed warning in gcc4.9. Thanks to Scott McCaskill
    (https://github.com/usefulcat) for the patch.

2019-04-16:
  Merged changes to install libraries in the correct place when
  using 64-bit libraries.
  Contributed by Jason Zaman <jasonzaman@gmail.com> and (independently)
    Dan Church (https://github.com/h3xx)

2019-03-11:
  Use relative includes in the library. This shouldn't have any visible effect
  for consumers of the library.

  Update version number.

2019-03-06:
  Fix typo in test.
  Update version number.

2019-03-03:
  Fix separator characters when they they don't fit into 8 bits.
  Update version number.

2019-02-16:
  Check correctly for _MSC_VER.
  Patch by Ben Boeckel

2019-01-17:
  Allow the library to be compiled for Emscripten.
  Patch by Tim Paine.

2018-09-15:
  Update version numbers. This also updates the shared-library version number.

2018-09-09:
  Fix bug where large hex literals would lose their minus sign.
  Added support for separator characters (which adds a new optional
  argument). Thus increasing the version number to 3.1.0